--- a/Scripts/DatePicker/DatePicker.css
+++ b/Scripts/DatePicker/DatePicker.css
@@ -5,6 +5,9 @@
   border-radius:10px;
   padding:10px;
   color:#23272a !important;
+  background-color: #fff !important;
+  border-radius: 10px !important;
+  padding: 23px !important;
 }
 .react-date-picker,
 .react-date-picker *,
@@ -23,6 +26,8 @@
   flex-grow: 1;
   flex-shrink: 0;
   width:100%;
+  height:20px;
+  margin-top:-10px;
 }
 .react-date-picker__inputGroup {
   min-width: calc((4px * 3) +  0.54em * 8  +  0.217em * 2);
