--- a/Scripts/DatePicker/DatePickerClients.css
+++ b/Scripts/DatePicker/DatePickerClients.css
@@ -1,52 +1,11 @@
 .react-date-picker {
   display: inline-flex;
-  
-}
-
-.react-date-picker-clients {
-  background:#ebeef6 !important;
-  border-radius:20px !important;
-  padding:10px !important;
+  width:100%;
+  border-radius:10px;
   color:#23272a !important;
-}
-.ui.radio.checkbox label {
-  padding-left:20px !important;
-  padding-right:10px;
-}
-
-.program {
   background-color: #ebeef6 !important;
-  padding:10px !important;
-  color:#23272a !important;
-  border:0 !important;
-  border-radius:20px !important;
-  height:40px !important;
-  line-height:20px !important;
-
-}
-
-.tags {
-  background-color: #ebeef6 !important;
-  padding:10px !important;
-  color:#23272a !important;
-  border:0 !important;
-  border-radius:20px !important;
-  height:40px !important;
-}
-.ui.multiple.dropdown>.text {
-  margin:1px 0px 0px 3px !important;
-}
-
-.ui.multiple.dropdown>.label {
-  margin-top:-2px !important;
-}
-
-.program::placeholder {
-  color:#23272a !important;
-}
-
-.ui.default.dropdown:not(.button)>.text, .ui.dropdown:not(.button)>.default.text {
-  color:#8c9197 !important;
+  border-radius: 10px !important;
+  padding: 23px !important;
 }
 .react-date-picker,
 .react-date-picker *,
@@ -57,14 +16,16 @@
   box-sizing: border-box;
 }
 .react-date-picker--disabled {
-  background-color: #000;
-  color: #8c9197;
+  background-color: #f0f0f0;
+  color: #6d6d6d;
 }
 .react-date-picker__wrapper {
   display: flex;
   flex-grow: 1;
   flex-shrink: 0;
   width:100%;
+  height:20px;
+  margin-top:-10px;
 }
 .react-date-picker__inputGroup {
   min-width: calc((4px * 3) +  0.54em * 8  +  0.217em * 2);
@@ -80,7 +41,7 @@
   min-width: 0.54em;
   height: 100%;
   position: relative;
-  padding: 10 0px !important;
+  padding: 0 1px;
   border: 0;
   background: none;
   font: 'Poppins';
@@ -102,7 +63,7 @@
 .react-date-picker__button {
   border: 0;
   background: transparent;
-  padding: 0px 6px !important;
+  padding: 4px 6px;
 }
 .react-date-picker__button:enabled {
   cursor: pointer;
@@ -118,6 +79,7 @@
   display: inherit;
 }
 .react-date-picker__calendar {
+  width: 350px;
   max-width: 100vw;
   position: absolute;
   top: 100%;
